# opengl_2dscene

./: .gitmodules  CMakeLists.txt  README.md  conf_build_run.sh  main.c  triangle-opengl.c
latex/: bibliography.bib  main.tex  uth_template.tex
src/: CMakeLists.txt  WINDOWS.txt  conf_build_run.bat  conf_build_run.sh  configure.sh  main.c  normalization.ods  run.sh
